[package]
name = "myrustlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "myrustlib"
crate-type=["cdylib"]

#[dependencies]
#cpython = "0.7.0"
#
#[features]
#default = ["python3"]
#python3 = ["cpython/python3-sys", "cpython/extension-module"]

[dependencies]
pyo3 = { version = "0.18.2", features = ["extension-module"] }